--- a/mars oddessy GUI visualbasic .net/mars oddessy/My Project/Resources.resx
+++ b/mars oddessy GUI visualbasic .net/mars oddessy/My Project/Resources.resx
@@ -121,4 +121,7 @@
   <data name="firetruck" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\firetruck.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="divider - Copy1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\divider - Copy.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
